feat(sync): add real-time smart polling
